[b][color=orange]v4.51[/color], 12.07.2020[/b][list]
[*]Prevent an error which cause that the Export Profile didnt work.
[*]My chat seperators now take account of the Chat Panel Backdrop Settings.
[*]Simplify my Tooltip Icons.
[*]UNDER INVESTIGATION: Added back Item Level Links. See in game Changelog for infos.[/list]


[b][color=orange]v4.50[/color], 09.07.2020[/b][list]
[*]Try to prevent an error with my ChatButton.
[*]Add an additional check if you enable the rectangle minimap.[/list]


[b][color=orange]v4.49[/color], 08.07.2020[/b][list]
[*]Take account for the latest DataTexts update from ElvUI.
[*]NOTE: If you want my new DataTexts, you need to do the install step for DataTexts.
[*]Added own custom DataTexts via the new ElvUI option.
[*]Fixed Heal-Layout UnitFrames position.
[*]Use a new texture. (Do the install to get it :P)
[*]Some skin updates & small code changes.
[*]Updated the Combat Alert (Enter/Leave Combat message).
[*]WIP: Added rectangle Minimap.[/list]


[b][color=orange]v4.48[/color], 30.04.2020[/b][list]
[*]Take account for the latest DataTexts update from ElvUI.[/list]


[b][color=orange]v4.47[/color], 29.04.2020[/b][list]
[*]Fixed MicroBar Styling.
[*]Removed the ActionBar toggle buttons.
[*]Updated Tags and use new Tags from ElvUI.
[*]Removed some bad installer settings. THX Simpy.
[*]Tweak/Cleanup my Armory Module.
[*]Added CorruptionsTooltip: All Credits belong Anayanka (Defias Brotherhood - EU)
[*]Added an option to change Minimap Blip textures.
[*]Some skin/code tweaks.
[*]Renamed some movers. You might need to reposition some elements.[/list]


[b][color=orange]v4.46[/color], 16.02.2020[/b][list]
[*]Updated some skins.
[*]Changed the texture on BigWigs/Details.
[*]Changed the Vehicle Exit Button texture. #82
[*]Added option for the MicroBar to change the backdrop. #75
[*]Use different Role Icons on the UnitFrames. Thx Peri
[*]Updated TooltipIcons.[/list]


[b][color=orange]v4.45[/color], 10.02.2020[/b][list]